# oepandas

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py  tasks.py  vrzn.toml
examples/: 01_getting_started.ipynb  02_advanced_features.ipynb
oepandas/: __init__.py  exception.py  molecule.py  pandas.pyi  pandas_extensions.py  py.typed  util.py
oepandas/arrays/: __init__.py  base.py  design_unit.py  display.py  fingerprint.py  molecule.py  query.py
tests/: test_base_array.py  test_depict.py  test_design_unit.py  test_display_array.py  test_molecule.py  test_oemolecule.py  test_pandas_extensions.py  test_query.py  test_util.py  test_version.py
tests/assets/: 10-tagged.sdf  10.oeb  10.oedb  10.sdf  10.smi  2.oedu  5.csv  5.sdf  5.smi  phenols.xlsx  phenols_trunc.csv  test-csv-expected.csv
