# Packaging configuration file for oepandas
# ----------------------------------------------------------------------------------------------------------------------
#   Guide: https://packaging.python.org/en/latest/guides/writing-pyproject-toml/
#   Spec:  https://packaging.python.org/en/latest/specifications/pyproject-toml/


# Choosing a build backend:
# https://packaging.python.org/en/latest/tutorials/packaging-projects/#choosing-a-build-backend
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]

# Project name (how users will pip install this project)
name = "oepandas"

# Dynamic variables that are populated from other standard locations
dynamic = ["version", "dependencies"]

# One-line description or tagline
description = "Native handling of OpenEye objects in Pandas"

# Longer description or project README file
# https://packaging.python.org/specifications/core-metadata/#description-optional
readme = "README.md"

# Specify which Python versions you support (enforced by pip)
# https://packaging.python.org/guides/distributing-packages-using-setuptools/#python-requires
requires-python = ">=3.11"

# SPDX license expression
# https://packaging.python.org/en/latest/specifications/core-metadata/#license
license = "MIT"

# License files to include in the distribution
license-files = ["LICENSE"]

# Search keywords
keywords = ["science"]

# Project authors and contact information
authors = [
    {name = "Scott Arne Johnson", email = "scott.arne.johnson@gmail.com" }
]

# Classifiers help users find your project by categorizing it
# https://pypi.org/classifiers/
classifiers = [
    # How mature is this project? Common values are
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    "Development Status :: 5 - Production/Stable",

    # Python versions that are supported (not enforced by pip)
    "Programming Language :: Python :: 3 :: Only"
]

# Additional groups of dependencies
# https://packaging.python.org/en/latest/specifications/dependency-specifiers/#extras
[project.optional-dependencies]
dev = ["invoke", "build", "pytest"]
mae = ["oepandas-mae>=0.1.0"]

# ----------------------------------------------------------------------------------------
# These configurations are specific to the `setuptools` build backend
# ----------------------------------------------------------------------------------------

[tool.setuptools.packages.find]

# Indicate the name of our package
include = ["oepandas*"]

# Exclude any test directory
exclude = ["*test*"]

[tool.setuptools.package-data]
# Include type stub files and py.typed marker
oepandas = ["*.pyi", "py.typed"]


[tool.setuptools.dynamic]

# Get the version from a "single source of truth"
version = {attr = "oepandas.__version__"}

# Package dependencies (these will be installed by pip)
# https://packaging.python.org/discussions/install-requires-vs-requirements/
dependencies = {file = ["requirements.txt"]}


[tool.pytest.ini_options]
filterwarnings = [
    # Suppress SWIG-related deprecation warnings from OpenEye toolkit bindings
    "ignore:builtin type Swig.*:DeprecationWarning",
    "ignore:builtin type swig.*:DeprecationWarning",
]


# ----------------------------------------------------------------------------------------
# Ruff configuration (linting and formatting)
# https://docs.astral.sh/ruff/configuration/
# ----------------------------------------------------------------------------------------

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",   # Line too long (handled by formatter)
    "B008",   # Function call in default argument
]

[tool.ruff.lint.isort]
known-first-party = ["oepandas"]


# ----------------------------------------------------------------------------------------
# MyPy configuration (type checking)
# https://mypy.readthedocs.io/en/stable/config_file.html
# ----------------------------------------------------------------------------------------

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
ignore_missing_imports = true
exclude = ["tests/", "build/", "dist/"]

# The OpenEye bindings lack type information and the pandas extension-array
# interface requires overrides that intentionally diverge from the base class.
# Relax checks that primarily flag those integration surfaces so mypy can still
# catch real bugs in our own code without drowning in false positives.
disable_error_code = [
    "attr-defined",
    "arg-type",
    "assignment",
    "no-any-return",
    "override",
    "union-attr",
    "valid-type",
    "misc",
    "no-redef",
    "var-annotated",
    "name-match",
    "return-value",
]
